--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,6 +1,6 @@
 import os 
 
-configfile: "configs/config_umap.json"
+configfile: "configs/config_control.json"
 configname = config["config_name"]
 
 # Get all combinations through the config file
@@ -294,6 +294,32 @@ rule integrate:
     log:
         "logs/{configname}/integrate/integrate_{data_folder}_{ds_celltype}_celltypes_{ds_proportion}" +
         "_downsample_{num_batches}_batch_ds_c_{rep}.log"
+    priority: 0
+    shell:
+        """
+        python {params.script_path} \
+            --filedir {input} \
+            --ds_celltypes {wildcards.ds_celltype} \
+            --ds_proportions {wildcards.ds_proportion} \
+            --num_batches {wildcards.num_batches} \
+            --outfile {output} \
+            &> {log}
+        """
+
+# Integrate the indicated h5ad files from config, based on dataset, using the Universal Cell Embeddings foundation model
+rule integrate:
+    conda:
+        "envs/integrate_uce.yaml"
+    input:
+        "../resources/h5ad_files/int_datasets/{data_folder}"
+    output:
+        "../results/{configname}/integrated_results/{data_folder}_{ds_celltype}_celltypes_{ds_proportion}" +
+        "_downsample_{num_batches}_batch_ds_c_{rep}_integrated_uce.h5ad"
+    params:
+        script_path = "scripts/python/integrate_data_UCE.py",
+    log:
+        "logs/{configname}/integrate/integrate_{data_folder}_{ds_celltype}_celltypes_{ds_proportion}" +
+        "_downsample_{num_batches}_batch_ds_c_{rep}_uce.log"
     priority: 0
     shell:
         """
