--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,6 +2,7 @@ import os
 import hashlib
 import numpy as np 
 
+# git test
 
 configfile: "configs/config_umap.json"
 configname = config["config_name"]
